# taxi-ops

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  alembic.ini  pyproject.toml  user-role-management-spec.md
alembic/: env.py
alembic/versions/: 12727c40ba86_add_admin_audit_log_notifications_bank_.py  3d6e86453878_add_servicing_models.py  4e181943ee3f_add_remuneration_employee_salary_.py  8dce51640df6_add_organisation_settings_for_reporting.py  9522b1ecf6a2_add_license_disk_fields_to_taxi.py  a0b0bc4bc7d4_phase3_fuel_route_route_assignment.py  a32de1369dcb_initial_org_user.py  b650666ac82b_add_subscription_models.py  c4d5e6f7a8b9_add_user_status_and_invite_role.py  d5e6f7a8b9c0_add_taxi_assigned_route.py  f2cc2df8e7ca_phase1_taxi_driver_income_breakdown_.py  fae852219c6b_add_depots_insurance_loans_spare_parts_.py
app/: config.py  database.py  main.py  seed.py  seed_admin.py
app/api/: __init__.py  admin.py  auth.py  breakdowns.py  depots.py  deps.py  drivers.py  employees.py  fuel.py  income.py  insurance.py  mechanic_payments.py  organisation.py  remuneration.py  reporting.py  reports.py  routes_api.py  salary_payments.py  seed.py  servicing.py  spare_parts.py  subscriptions.py  taxi_loans.py  taxis.py  users.py
app/core/: security.py
app/models/: __init__.py  admin_helpers.py  audit_log.py  base.py  breakdown.py  depot.py  fuel.py  (+18 more)
tests/: conftest.py  test_admin_dashboard_separation.py  test_fixed_costs.py  test_phase1.py  test_phase2.py  test_phase3.py  test_remuneration.py  test_reporting_suite.py  test_tenant_isolation.py
(+102 files in other folders)
