[project]
name = "taxi-ops"
version = "0.1.0"
description = "South African Taxi Fleet Management Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "python-jose[cryptography]",
    "bcrypt>=4.0",
    "jinja2",
    "python-multipart",
    "fpdf2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
